--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,13 @@ dependencies {
     def lifecycle_version = "2.5.0-alpha02"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    def fragment_version = '1.4.1'
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    def nav_version = '2.4.1'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     implementation "com.google.dagger:hilt-android:2.38.1"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
