--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp">
         <activity
-            android:name=".ForecastActivity"
+            android:name=".ForecastFragment"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
